应付款管理修改

--- a/view/accountsPayable/accountsPayable.html
+++ b/view/accountsPayable/accountsPayable.html
@@ -24,8 +24,7 @@
                         <div class="col-xs-4">
                             <div class="form-group">
                                 <label class="control-label">供应商：</label>
-                                <input type="text" class="form-control reduce-width">
-                                <button type="submit" class="btn btn-sm btn-searching" ng-click="openStoreQueryType()"><i class="iconfont">&#xe600;</i></button>
+                                <input type="text" class="form-control ">
                             </div>
                         </div>
                         <div class="col-xs-4">
