--- a/view/announcementManage/announcementManage.html
+++ b/view/announcementManage/announcementManage.html
@@ -74,16 +74,27 @@
                                 </div>
                             </div>
                         </div> 
-                        <div class="col-xs-4">
+                        <div class="col-xs-4" ng-controller="cityCheckCtrl">
                             <div class="form-group">
                                 <label class="control-label">公告地区：</label>
-                                <div class="select-box">
-                                    <select class="form-control" id="retailPriceItem" ng-model="conditionQueryForm.retailPriceItem">
-                                        <option value="">全部</option>
-                                        <!-- <option ng-repeat="item in retailPriceType" value="{{item.retailShopId}}">{{item.retailShopName}}</option> -->
-                                    </select>
+                                <input type="text" class="form-control reduce-width" ng-model="checkedAreaName">
+                                <button ng-click="cityCheck()" type="submit" class="btn btn-sm btn-location"><i class="iconfont">&#xe6cb;</i></button>
+                                <div class="city-check-box" ng-cloak ng-show="visible">
+                                    <uib-tabset active="key">
+                                        <uib-tab index="1" heading="省份">
+                                            <div class="city-content">
+                                                <li class="city-item" ng-class="{current: $index === provinceIndex}" ng-repeat="item in citys" ng-click="handleSelectCity('province', $index, item.areaId, item.areaName)">{{item.areaName}}</li>
+                                            </div>
+                                        </uib-tab>
+                                        <uib-tab index="2" heading="城市">
+                                            <div class="city-content">
+                                                <li class="city-item" ng-class="{current: $index === cityIndex}" ng-repeat="item in citys[provinceIndex].children" ng-click="handleSelectCity('city', $index, item.areaId, item.areaName)">{{item.areaName}}</li>
+                                            </div>
+                                        </uib-tab>
+                                    </uib-tabset>
                                 </div>
                             </div>
+                            <div class="zhezhao" ng-click="clHide()" ng-show="visible" ng-cloak></div>
                         </div> 
                         <div class="col-xs-4 text-right">
                             <div class="form-group btn-search">
