--- a/view/addAnnouncement/addAnnouncement.css
+++ b/view/addAnnouncement/addAnnouncement.css
@@ -81,6 +81,7 @@
 
 .attachments{
     width:100%;
+    min-height:27px;
     line-height:27px;
     background: #eddbff;
 }
@@ -100,6 +101,7 @@
     color: #f2232a;
     border:0;
     background: #eddbff;
+    height:24px;
 }
 .attachments .attm:after{
     content: "|";
@@ -177,4 +179,10 @@
 }
 .zhezhao{
    height:100%; width:100%; position:fixed; top:0; left:0; z-index:98;
+}
+.result-list .fileup{
+    opacity:0;
+    position:absolute;
+    width:80px;
+    height:25px;
 }
