README+销售统计查询

--- a/view/salesStatistics/salesStatistics.html
+++ b/view/salesStatistics/salesStatistics.html
@@ -187,6 +187,7 @@
     <script src="../../resources/js/angular-touch.min.js"></script>
     <script src="../../resources/js/angular-animate.min.js"></script>
     <script src="../../resources/js/angular-aria.min.js"></script>
+    <script src="../../resources/js/angular-locale_zh-cn.js"></script>
     <script src="../../resources/js/jquery.min.js"></script>
     <script src="../../resources/js/bootstrap.min.js"></script>
     <script src="../../resources/js/ui-bootstrap.js"></script>
