库存统计 添加导出按钮

--- a/view/inventory/inventory.html
+++ b/view/inventory/inventory.html
@@ -66,6 +66,10 @@
                             <p class="model-title">库存统计明细列表</p>
                         </div>
                     </div>
+                    <div class="col-xs-8 text-right">
+                        <button class="btn btn-xs btn-set"><i class="iconfont">
+                        &#xe627;</i> Excel导出</button>
+                    </div>
                 </div>
             </div>
             <div class="result-table">
