--- a/view/opinionReplyDetail/opinionReplyDetail.css
+++ b/view/opinionReplyDetail/opinionReplyDetail.css
@@ -77,7 +77,7 @@
 }
 .picurs li img{
 	max-width:90px;
-    max-height:75px;
+    max-height:70px;
     vertical-align: middle;
 }
 .fileup{
@@ -100,6 +100,10 @@
     padding: 0;
     color: #fb441e;
     font-size: 18px;
+    opacity: 0;
+}
+.del-btn:hover{
+    opacity: 1;
 }
 .toFeedback .replybtn{
 	border:0;
@@ -120,6 +124,7 @@
 	width:360px;
 	border:0;
 	line-height: 18px;
+	text-align: left;
 }
 .toFeedback .remind-wrds .p2{
 	color:#959595;
