--- a/view/opinionReplyDetail/opinionReplyDetail.html
+++ b/view/opinionReplyDetail/opinionReplyDetail.html
@@ -44,7 +44,7 @@
                                     <li ng-repeat="f in files">
                                         <span class="nouse"></span>
                                         <img ngf-thumbnail="f">
-                                       <!--  <button class="del-btn iconfont" ng-click="btn_remove(file)">&#xe65f;</button> -->
+                                        <button class="del-btn iconfont" ng-click="btn_remove($index)">&#xe65f;</button>
                                     </li>
                                     <li class="upload">
                                         <input class="fileup" ngf-select="uploadFiles($files, $invalidFiles)" multiple accept="image/*" ngf-max-height="1000" ngf-max-size="1MB">
@@ -91,7 +91,6 @@
     <script src="../../resources/js/sweetalert.min.js"></script>
     <script src="../../resources/js/ng-file-upload-shim.min.js"></script> 
     <script src="../../resources/js/ng-file-upload.min.js"></script>
-    <script src="../../resources/js/uploader.min.js"></script>
     <script src="opinionReplyDetail.js"></script>
 </body>
 
