--- a/view/salesStatisticsInquiry/salesStatisticsInquiry.html
+++ b/view/salesStatisticsInquiry/salesStatisticsInquiry.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="../../resources/css/bootstrap.css">
     <link rel="stylesheet" href="../../resources/css/reset.css">
     <link rel="stylesheet" href="../../resources/css/common.css">
-    <link rel="stylesheet" href="salesStatistics.css">
+    <link rel="stylesheet" href="salesStatisticsInquiry.css">
 </head>
 
-<body ng-app="salesStatisticsModule">
+<body ng-app="salesStatisticsInquiryModule">
     <!-- 查询 -->
-    <div class="dailyAccountsHistory top-line wavy-line" ng-controller="salesStatisticsQuery">
+    <div class="dailyAccountsHistory top-line wavy-line" ng-controller="salesStatisticsInquiryQuery">
         <div class="alarm-query fn-clear">
             <p class="alarm-query-title fn-left">搜<br/>索</p>
             <div class="condition-query-box fn-right">
@@ -79,7 +79,7 @@
                             <td class="border-right nub">￥7258.00</td>
                             <td class="border-right nub">￥789.00</td>
                             <td class="nub">￥0.00</td>
-                        </tr> 
+                        </tr>
                     </table>
                 </div>
             </div>
@@ -194,7 +194,7 @@
     <script src="../../resources/js/ui-bootstrap-tpls-2.1.3.js"></script>
     <script src="../../resources/js/lodash.js"></script>
     <script src="../../resources/js/sweetalert.min.js"></script>
-    <script src="salesStatistics.js"></script>
+    <script src="salesStatisticsInquiry.js"></script>
 </body>
 
 </html>
