会员信息查询

--- a/view/detailMembership/detailMembership.css
+++ b/view/detailMembership/detailMembership.css
@@ -1,21 +1,60 @@
-.purple-color{
-    color:#a870e0;
-}
-.bold{
-    font-weight: bold;
-}
-.check {
+.addCheck {
     min-height: 20px;
     margin: 10px;
     border-left: 1px solid #d5d4dc;
     border-right: 1px solid #d5d4dc;
     background-color: #fff;
 }
-
+.purchase-infomation {
+    padding: 10px 15px;
+    background-color: #fff;
+    min-height:400px;
+}
+.infomation-form {
+    margin-top: 8px;
+    padding: 0 5px;
+    border-bottom: 1px dashed #ddd;
+}
+.model-header {
+    margin-top: 5px;
+    height: 25px;
+    line-height: 25px;
+}
+.model-img {
+    float: left;
+    width: 20px;
+    height: 20px;
+    margin: 2px 4px;
+}
+.model-title {
+    color: #333;
+    font-size: 14px;
+    font-weight: bold;
+}
+.form-group .reduce-width {
+    width: calc(100% - 90px) !important;
+}
+.btn-searching {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 25px;
+    padding: 0;
+    background-color: #fff;
+    border-color: #ccc;
+    border-radius: 15px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    line-height: 25px;
+    color: #a870e0;
+    font-size: 12px;
+    text-align: center;
+}
 .condition-query {
-    height: 117px;
+    height: 80px;
     padding: 10px 10px 10px 0;
-    background: url('../../resources/images/query-bg-big.png') no-repeat 0 0;
+    background: url('../../resources/images/query-bg.png') no-repeat 0 0;
     background-color: #f8f8f8;
     border-bottom: 1px dashed #d2d2d2;
 }
@@ -23,7 +62,7 @@
 .condition-query-title {
     width: 20px;
     height: 50px;
-    margin: 22px 0 0 8px;
+    margin: 5px 0 5px 8px;
     line-height: 25px;
     color: #333;
     font-size: 14px;
@@ -58,12 +97,18 @@
     width: calc(100% - 90px) !important;
 }
 
+.btn-another {
+    position: absolute;
+    top: -4px;
+    right: 0;
+}
+
 .result-list {
-    padding: 5px 5px 20px;
+    padding: 5px 5px 0;
 }
 
 .result-head {
-    margin-bottom: 5px;
+    margin-bottom: 2px;
 }
 
 .result-table table th {
@@ -74,7 +119,9 @@
     font-weight: 800;
     text-align: center;
 }
-
+.result-table table tr:nth-of-type(2n){
+    background: #faf7fc;
+}
 .result-table table td {
     padding: 2px !important;
     text-align: center;
@@ -84,109 +131,18 @@
     height: 25px;
     line-height: 25px;
 }
+.mb50{
+    margin-bottom: 50px;
+}
+/* 商店查询弹出框 */
 
-.model-header {
-    height: 25px;
-    line-height: 25px;
-}
-
-.model-img {
-    float: left;
-    width: 20px;
-    height: 20px;
-    margin: 2px 4px;
-}
-
-.model-title {
-    color: #333;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.btn-set {
-    margin-left: 2px;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: #fff;
-    border-color: #c899f7;
-    color: #333;
-    font-size: 12px;
-}
-
-.btn-set:focus,
-.btn-set.focus {
-    background-color: #f7f7f7;
-    border-color: #c899f7;
-    color: #333;
-}
-
-.btn-set:hover {
-    background-color: #f7f7f7;
-    border-color: #c899f7;
-    color: #333;
-}
-
-.btn-set .iconfont {
-    color: #a870e0;
-}
-
-.btn-edit {
-    margin-left: 2px;
-    padding: 0 6px;
-    background-color: #eddbff;
-    border-color: #ceaaf2;
-    color: #a870e0;
-    font-size: 12px;
-}
-
-.btn-edit:focus,
-.btn-edit.focus {
-    border-color: #c899f7;
-    background-color: #e0c2ff;
-    color: #a870e0;
-}
-.btn-edit:hover {
-    border-color: #c899f7;
-    background-color: #e0c2ff;
-    color: #a870e0;
-}
-.btn-edit .iconfont {
-    color: #a870e0;
-}
-.btn-disabled {
-    margin-left: 2px;
-    padding: 0 6px;
-    background-color: #dcdcdc;
-    border-color: #dcdcdc;
-    color: #bbb;
-    font-size: 12px;
-}
-.btn-disabled:focus,
-.btn-disabled.focus {
-    background-color: #dcdcdc;
-    border-color: #dcdcdc;
-    color: #bbb;
-}
-.btn-disabled:hover {
-    background-color: #dcdcdc;
-    border-color: #dcdcdc;
-    color: #bbb;
-}
-.btn-disabled .iconfont {
-    color: #bbb;
-}
-.form-group{
-    padding-left:110px;
-}
-.form-group label{
-    width: 110px !important;
-}
+/* 地区选择 */
 .city-check-box {
     position: absolute;
     top: 30px;
     right: 0;
     z-index: 99;
-    width: calc(100% - 110px);
+    width: calc(100% - 90px);
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 10px;
@@ -255,38 +211,19 @@
     color: #fff;
     border-radius: 5px;
 }
-.form-group .form-control.reduce-width {
-    width: calc(100% - 90px) !important;
+/* 地区选择 */
+.btns{
+    width:100%;
+    height:48px;
+    background: #f8f8f8;
+    border-top: 1px dashed #d2d2d2;
+    position:absolute;
+    bottom:0;
+    left:0;
+    overflow: hidden;
 }
-.btn-searching {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30px;
-    height: 25px;
-    padding: 0;
-    background-color: #fff;
-    border-color: #ccc;
-    border-radius: 15px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    line-height: 25px;
-    color: #a870e0;
-    font-size: 12px;
-    text-align: center;
-}
-.btn-searching.btn-ser{
-    right: 90px;
-}
-.btn-query {
-    position: absolute;
-    top: -1px;
-    right: 0;
-}
-.btn-another {
-    position: absolute;
-    top: -4px;
-    right: 0;
+.btns .btn{
+    margin-top:10px;
 }
 .result-table .grey-table{
     border:1px solid #c9c9c9;
@@ -299,6 +236,17 @@
 .result-table .grey-table tr:nth-of-type(2n){
     background: #fff;
 }
-.zhezhao{
-   height:100%; width:100%; position:fixed; top:0; left:0; z-index:98;
+
+.detail-label {
+    width: 100%;
+    height: 25px;
+    line-height: 25px;
+}
+
+.member-name {
+    font-weight: 800;
+}
+
+.detail-list {
+    margin-left: 10px;
 }
