积分调整中数字的加减符号更正

--- a/view/membershiPointManage/membershiPointManage.html
+++ b/view/membershiPointManage/membershiPointManage.html
@@ -235,9 +235,9 @@
                                     <div class="detail-msg top">
                                         <span class="vertl">调整积分：</span>
                                         <div class="adjust"> 
-                                            <button class="plus" ng-click="count = count - 1">-</button>
+                                            <button class="plus iconfont" ng-click="count = count - 1">&#xe63b;</button>
                                             <input type="number" class="num" ng-model="count">
-                                            <button class="add" ng-click="count = count + 1">+</button>
+                                            <button class="add iconfont" ng-click="count = count + 1">&#xe60e;</button>
                                         </div>
                                     </div>
                                 </div>
