--- a/view/opinionReplyDetail/opinionReplyDetail.css
+++ b/view/opinionReplyDetail/opinionReplyDetail.css
@@ -60,25 +60,19 @@
     border-radius: 0;
     border:1px solid #e2e2e2;
 }
-
 .picurs li{
     float: left;
     width:90px;
     height:75px;
+    line-height: 73px;
     border:1px solid #e2e2e2;
     margin-right:7px;
     position: relative;
     text-align: center;
 }
-.picurs li .nouse{
-    height:100%;
-    display: inline-block;
-    vertical-align: middle;
-}
 .picurs li img{
-	max-width:90px;
-    max-height:70px;
-    vertical-align: middle;
+	max-width:100%;
+    max-height:100%;
 }
 .fileup{
     opacity:0;
